--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
+title:            My Little Forest
+longtitle:        Jekyll Gitbook Theme for Second Brain
 author:           HE Tao
 email:            sighingnow@gmail.com
 description: >
